# AI-Persona-Prompts-Unleash-the-Power-of-Great-Minds

./: .gitignore  AI_Persona_Prompts.md  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE.md  README.md  gitignore.  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml  docs.yaml  release.yaml
docs/: index.md  personae.md
examples/: new_persona_prompts.md  quickstart.ipynb  voice_dictation_prompts.md
personacraft/: __init__.py  ai_client.py  cache.py  cli.py  config.py  exceptions.py  logger.py  metrics.py  models.py  modes.py  persona.py  prompt.py  session.py  templates.py
personacraft/personae/: __init__.py  curie.py  davinci.py  einstein.py  feynman.py  lovelace.py  tesla.py
personacraft/utils/: __init__.py
prompts/: README.md
scripts/: persona_cli.py
tests/: test_ai_client.py  test_cache.py  test_cli.py  test_config.py  test_exceptions.py  test_logger.py  test_metrics.py  test_models.py  test_modes.py  test_persona.py  test_personae.py  test_session.py  test_templates.py  test_utils.py
