[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["personacraft"]


[project]
name = "personacraft"
version = "0.1.0"
description = "Persona prompt library and CLI"
authors = [{name = "Daniel Maley", email = "example@example.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = ["pydantic"]

[project.optional-dependencies]
dev = ["pytest", "coverage", "ruff", "mypy", "mkdocs", "pytest-cov"]


[project.scripts]
personacraft = "personacraft.cli:main"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=personacraft --cov-report=term-missing"
